--- a/templates/index.html
+++ b/templates/index.html
@@ -428,7 +428,7 @@
                       <img src="{% static 'images/thumb-tomatoes.png' %}"  class="tab-image">
                     </a>
                   </figure>
-                  <h3>Sunstar Fresh Melon Juice</h3>
+                  <h3>chicken</h3>
                   <span class="qty">1 Unit</span><span class="rating"><svg width="24" height="24" class="text-primary"><use xlink:href="#star-solid"></use></svg> 4.5</span>
                   <span class="price">$18.00</span>
                   <div class="d-flex align-items-center justify-content-between">
